GMM_Main/src/objects/Prime_Application__c.object
<CustomObject>
    <fields>
        <fullName>Allow_Prime_and_Sub_Applications__c</fullName>
        <formula>TEXT( NOFO_RFP__r.Allow_Prime_Applicants_and_Sub_Applicant__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allow Prime and Sub Applications</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Delinquent_on_any_Federal_Debt__c</fullName>
        <label>Applicant Delinquent on any Federal Debt</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assurances_Text__c</fullName>
        <defaultValue>&quot;This is setup on the CNCS NOFO. The setup (text or link) should carry over to the prime application with the checkbox for the prime applicant to check and carryout the e-signature process&quot;</defaultValue>
        <label>.</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Assurances__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assurances</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authorization_Text__c</fullName>
        <defaultValue>&quot;This is setup on the CNCS NOFO. The setup (text or link) should carry over to the prime application with the checkbox for the prime applicant to check and carryout the e-signature process&quot;</defaultValue>
        <label>.</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Authorization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoNumber__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>AutoNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CNCS_Corporate_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CNCS Corporate Program</label>
        <referenceTo>CNCS_Corporate_Program__c</referenceTo>
        <relationshipLabel>Prime Applications</relationshipLabel>
        <relationshipName>Prime_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CNCS_Status__c</fullName>
        <label>Application Status</label>
        <picklist>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recommended to CNCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to CNCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted Late to CNCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned for Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected by CNCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Held for Formula</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Awarded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepting Sub-Applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed to Sub-Applicants</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Certification_Text__c</fullName>
        <defaultValue>&quot;This is setup on the CNCS NOFO. The setup (text or link) should carry over to the prime application with the checkbox for the prime applicant to check and carryout the e-signature process&quot;</defaultValue>
        <label>.</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitive_or_Formula__c</fullName>
        <label>Competitive or Formula</label>
        <picklist>
            <picklistValues>
                <fullName>Competitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formula</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Corporate_Program__c</fullName>
        <formula>NOFO_RFP__r.Corporate_Program__r.Name</formula>
        <label>Corporate Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>As per req #2790</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demonstrates_Ethics_Integrity__c</fullName>
        <description>As per req #2790</description>
        <label>Demonstrates Ethics &amp; Integrity</label>
        <picklist>
            <controllingField>Information_available__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EO_12372_Process__c</fullName>
        <inlineHelpText>Is this Application Subject to Review by State Executive Order 12372 Process?</inlineHelpText>
        <label>EO 12372 Process</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ex_Officer_Cost_Share__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>As per req #2790</description>
        <label>Ex. Officer Cost Share</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Prime_Applications3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Executive_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>As per req #2790</description>
        <label>Executive Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Prime_Applications6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAPIIS_Review_Comments__c</fullName>
        <description>As per req #2790</description>
        <label>FAPIIS Review Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grants_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>As per req #2790</description>
        <label>Grants Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Prime_Applications5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>If_yes_please_explain__c</fullName>
        <label>If yes, please explain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_please_explain_app_delinque__c</fullName>
        <label>If yes, please explain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Information_available__c</fullName>
        <description>As per req #2790</description>
        <label>Information available?</label>
        <picklist>
            <controllingField>Subject_to_FAPIIS_Review__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_Area__c</fullName>
        <description>As per req #2790</description>
        <label>Issue Area</label>
        <picklist>
            <picklistValues>
                <fullName>Community and Economic Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FEMA (NCCC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health/Nutrition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homeland Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Needs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrastructure (NCCC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Conservatism (NCCC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urban/Rural Development (NCCC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disaster Recovery/Relief</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Various</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issuing_Office__c</fullName>
        <formula>TEXT( NOFO_RFP__r.Issuing_Officer__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Issuing Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>IF( $Profile.Name = &apos;Applicant&apos; || $Profile.Name = &apos;Grantee Admin&apos;, 
HYPERLINK(&quot;apex/projectlook?id=&quot;&amp;NOFO_RFP__r.Id&amp;&quot;&amp;primeApplicationId=&quot;&amp;Id&amp;&quot;&amp;opentoApps=&quot;&amp;TEXT(CNCS_Status__c), IMAGE( &quot;https://cns--devsb12--c.cs32.content.force.com/servlet/servlet.ImageServer?id=015r00000008unk&amp;oid=00Dr00000000Rxt&quot;, &quot;Submit Application&quot;)),&apos;Only Grantees Can Appply&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Award</label>
        <referenceTo>Master_Award__c</referenceTo>
        <relationshipLabel>Prime Applications</relationshipLabel>
        <relationshipName>Prime_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mitigating_Circumstances__c</fullName>
        <description>As per req #2790</description>
        <label>Mitigating Circumstances</label>
        <picklist>
            <controllingField>Demonstrates_Ethics_Integrity__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NOFA_RFP_ID__c</fullName>
        <formula>NOFO_RFP__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NOFA/RFP ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOFO_Fiscal_Year__c</fullName>
        <formula>TEXT( NOFO_RFP__r.Fiscal_Yr__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NOFO Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOFO_Name__c</fullName>
        <formula>NOFO_RFP__r.NOFA_name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NOFO Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOFO_RFP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NOFO/RFP</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>NOFA__c.NOFA_Type__c</field>
                <operation>contains</operation>
                <value>Continuation, New &amp; Continuation</value>
            </filterItems>
            <filterItems>
                <field>$Source.CNCS_Corporate_Program__c</field>
                <operation>equals</operation>
                <valueField>NOFA__c.CNCS_Corporate_Program__c</valueField>
            </filterItems>
            <filterItems>
                <field>NOFA__c.NOFA_Type__c</field>
                <operation>equals</operation>
                <value>New, New &amp; Continuation</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>NOFA__c</referenceTo>
        <relationshipLabel>Prime Applications</relationshipLabel>
        <relationshipName>Prime_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization_Legal_Name__c</fullName>
        <formula>Project_Name__r.Organization__r.Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prime_Application_Configured_BudgetForms__c</fullName>
        <label>Prime Application Configured BudgetForms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prime_Application_ID_Number__c</fullName>
        <label>Prime Application ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prime_Application_Id_w_link__c</fullName>
        <formula>IF( $Profile.Name  = &apos;State Commission Profile&apos;, HYPERLINK(&quot;/statecommission/&quot;&amp;Id,  Prime_Application_ID_Number__c , &quot; &quot;), IF( $Profile.Name  = &apos;Applicant&apos;  || $Profile.Name  = &apos;Grantee Admin&apos;, HYPERLINK(&quot;/granteeportal/&quot;&amp;Id,Prime_Application_ID_Number__c , &quot; &quot;), HYPERLINK(&quot;/&quot;&amp;Id,  Prime_Application_ID_Number__c , &quot; &quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prime Application Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prime_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prime Application</label>
        <referenceTo>Prime_Application__c</referenceTo>
        <relationshipLabel>Prime Applications</relationshipLabel>
        <relationshipName>Prime_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prime_Organization__c</fullName>
        <formula>Project_Name__r.Organization__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prime Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrmAppOrgId__c</fullName>
        <formula>NOFO_RFP__r.Organizations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PrmAppOrgId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_End_Date__c</fullName>
        <label>Program End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Office_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>As per req #2790</description>
        <label>Program Office Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Prime_Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>As per req #2790</description>
        <label>Program Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Prime_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Start_Date__c</fullName>
        <label>Program Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Program Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Grant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Grant</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Director__c</fullName>
        <formula>Project_Name__r.Project_Director__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Name</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Prime Applications</relationshipLabel>
        <relationshipName>Prime_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Title__c</fullName>
        <description>Project_Name__r.Title__c</description>
        <formula>Project_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Website_URL__c</fullName>
        <label>Project Website URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Ready_for_Ranking__c</fullName>
        <label>Ready for Ranking</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recommended_Award_Amount__c</fullName>
        <description>As per req #2790</description>
        <label>Recommended Award Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Satisfactory_Record_Executing_Programs__c</fullName>
        <label>Satisfactory Record Executing Programs</label>
        <picklist>
            <controllingField>Information_available__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Senior_Grants_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>As per req #2790</description>
        <label>Senior Grants Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Prime_Applications2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Senior_Program_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>As per req #2790</description>
        <label>Senior Program Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Prime_Applications4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Application_Identifier1__c</fullName>
        <label>State Application Identifier</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Application_Identifier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>State Application Identifier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Commission_Name__c</fullName>
        <formula>Project_Name__r.Organization__r.Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Commission Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Application_Count_For_FAIN__c</fullName>
        <description>This field is for Auto Number generation of subapp for FAIN which is to count the number of Sub Applications irrespective of Ranking value wrt PrimeApp</description>
        <label>Sub Application Count For FAIN</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Application_Count__c</fullName>
        <label>Sub-Application Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Application_Due_Date__c</fullName>
        <label>Sub-Application Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Concept_Paper_Due_Date__c</fullName>
        <label>Sub-Concept Paper Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subject_to_FAPIIS_Review__c</fullName>
        <description>As per req #2790</description>
        <label>Subject to FAPIIS Review</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SumOfBudgetLines__c</fullName>
        <label>SumOfBudgetLines</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Recommended_MSYs__c</fullName>
        <description>As per req #2790</description>
        <label>Total Recommended MSYs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Application__c</fullName>
        <label>Type of Application</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Continuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amendment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Prime Application</label>
    <listViews>
        <fullName>Created_Today1</fullName>
        <columns>NAME</columns>
        <columns>CNCS_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Prime_Application_ID_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
    </listViews>
    <nameField>
        <label>Prime Application ID Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prime Applications</pluralLabel>
    <recordTypes>
        <fullName>Application</fullName>
        <active>true</active>
        <label>Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>Concept_Paper</fullName>
        <active>true</active>
        <label>Concept Paper</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FAPIIS_Review_Comments</fullName>
        <active>true</active>
        <description>As per req #2790</description>
        <errorConditionFormula>OR(
AND(ISPICKVAL( Mitigating_Circumstances__c , &quot;Yes&quot;),(ISBLANK( FAPIIS_Review_Comments__c ))),
AND(
(ISPICKVAL( Satisfactory_Record_Executing_Programs__c , &quot;No&quot;)),
(ISPICKVAL( Demonstrates_Ethics_Integrity__c , &quot;No&quot;)), 
(ISPICKVAL( Mitigating_Circumstances__c , &quot;No&quot;)), 
(ISBLANK( FAPIIS_Review_Comments__c ))))</errorConditionFormula>
        <errorDisplayField>FAPIIS_Review_Comments__c</errorDisplayField>
        <errorMessage>Enter Comments</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sub_Application_Due_Date</fullName>
        <active>true</active>
        <errorConditionFormula>(Sub_Application_Due_Date__c &gt;  NOFO_RFP__r.Applications_due_date__c)</errorConditionFormula>
        <errorDisplayField>Sub_Application_Due_Date__c</errorDisplayField>
        <errorMessage>The date entered must be at least one day earlier than the &quot;Application Due Date&quot; on the NOFO</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sub_Concept_Paper_Due_Date_2</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(NOFO_RFP__r.Allow_Concept_Paper__c, &apos;Yes&apos;) &amp;&amp;   Sub_Concept_Paper_Due_Date__c &gt;  NOFO_RFP__r.Concept_Paper_Due_Date__c</errorConditionFormula>
        <errorDisplayField>Sub_Concept_Paper_Due_Date__c</errorDisplayField>
        <errorMessage>The date entered must be at least one day earlier than the &quot;Concept Paper Due Date&quot; on the NOFO</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sub_concept_paper_due_date_rule</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(NOFO_RFP__r.Allow_Concept_Paper__c, &apos;Yes&apos;) &amp;&amp;  ISNULL(Sub_Concept_Paper_Due_Date__c )</errorConditionFormula>
        <errorDisplayField>Sub_Concept_Paper_Due_Date__c</errorDisplayField>
        <errorMessage>A Sub-Concept Paper Due Date can only be entered if a concept paper is required by the NOFO</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>if_no_explain_applicant_deliquent_NA</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Applicant_Delinquent_on_any_Federal_Debt__c , &apos;No&apos;)&amp;&amp; NOT(ISBLANK(If_yes_please_explain_app_delinque__c))</errorConditionFormula>
        <errorDisplayField>Applicant_Delinquent_on_any_Federal_Debt__c</errorDisplayField>
        <errorMessage>Entries can only be made if &quot; Applicant Delinquent on any Federal Debt&quot; is “Yes.&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>if_no_explain_eo_NA</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( EO_12372_Process__c , &apos;No&apos;) &amp;&amp; NOT(ISBLANK(If_yes_please_explain__c))</errorConditionFormula>
        <errorDisplayField>EO_12372_Process__c</errorDisplayField>
        <errorMessage>Entries can only be made if &quot;EO 12372 Process&quot; is “Yes.&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>if_yes_explain_Delinquent</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Applicant_Delinquent_on_any_Federal_Debt__c , &apos;Yes&apos;)&amp;&amp; ISBLANK(If_yes_please_explain_app_delinque__c)</errorConditionFormula>
        <errorDisplayField>If_yes_please_explain_app_delinque__c</errorDisplayField>
        <errorMessage>An entry is required is “Applicant Delinquent on any Federal Debt” is “Yes.”</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>if_yes_explain_eo</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( EO_12372_Process__c , &apos;Yes&apos;) &amp;&amp; ISBLANK(If_yes_please_explain__c)</errorConditionFormula>
        <errorDisplayField>If_yes_please_explain__c</errorDisplayField>
        <errorMessage>An entry is required is “EO 12372 Process” is “Yes.”</errorMessage>
    </validationRules>
</CustomObject>